@startuml
' PlantUML generated by MODT
title Domain Model: StudyHelper
!include https://raw.githubusercontent.com/fredoslav2004/MinimalThemePUML/refs/heads/main/minimal-theme.puml
class User {
  name : string
  lastName : string
  email : string
}
class UserProfile {
  university : string
  studyProgram : string
  studyYear : string
  studyGoal : string
}
class Device {
  id : string
}
class Session {
  startedAt : long
  isEnded : bool
  startSession()
  endSession()
}
class DataPoint {
  temperature : float
  humidity : float
  co2Level : float
  lightLevel : float
  sentAt : long
}
class Rating {
  ratingValue : int
  createdAt : long
}
class CalendarEvent {
  title : string
  note : string
  startTime : long
  endTime : long
  allDay : bool
}
User "1" -- "0..1" UserProfile : has
User "1" -- "0..*" CalendarEvent : schedules
User "1" -- "0..*" Rating : submits
Device "1" -- "0..*" Session : records
Session "1" -- "0..*" DataPoint : stores
Session "1" -- "0..*" Rating : receives
@enduml
